[gd_scene load_steps=2 format=3 uid="uid://b4exp3r1m3nt4l"]

[ext_resource type="Script" path="res://scripts/ui/experimental_menu.gd" id="1_experimental"]

[node name="ExperimentalMenu" type="CanvasLayer"]
layer = 101
process_mode = 3
script = ExtResource("1_experimental")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -280.0
offset_right = 220.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Experimental Features"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "These features are experimental and may change."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FOVContainer" type="HBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FOVLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/FOVContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disable FOV Limitation"

[node name="FOVCheckbox" type="CheckButton" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/FOVContainer"]
layout_mode = 2

[node name="FOVDescription" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "When checked, enemies have 360-degree vision.
FOV limited (100Â°) by default. Press F7 to visualize."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ComplexGrenadeContainer" type="HBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ComplexGrenadeLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/ComplexGrenadeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Complex Grenade Throwing"

[node name="ComplexGrenadeCheckbox" type="CheckButton" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/ComplexGrenadeContainer"]
layout_mode = 2

[node name="ComplexGrenadeDescription" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "When enabled, uses 3-step throwing (G+RMB drag,
hold, release). When disabled, hold RMB to aim
with trajectory preview, release to throw."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AIPredictionContainer" type="HBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AIPredictionLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/AIPredictionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AI Player Prediction"

[node name="AIPredictionCheckbox" type="CheckButton" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer/AIPredictionContainer"]
layout_mode = 2

[node name="AIPredictionDescription" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "When enabled, enemies predict player movement
after losing sight. Uses cover analysis, flanking,
velocity tracking, and behavioral adaptation."
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FOV enabled: Enemies see in 100 degree cone"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"
